--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "chart.js": "^4.4.2",
     "framer-motion": "^11.0.6",
     "next": "14.1.0",
     "react": "^18",
