--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nextui-org/react": "^2.2.9",
     "chart.js": "^4.4.2",
     "framer-motion": "^11.0.6",
+    "i18next": "^23.10.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
