--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-simple-typewriter": "^5.0.1",
-    "sweetalert2": "^11.10.5"
+    "sweetalert2": "^11.10.5",
+    "usemailprex-react": "^1.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
