--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "chart.js": "^4.4.2",
     "framer-motion": "^11.0.6",
     "i18next": "^23.10.0",
-    "next": "14.1.0",
+    "next": "^14.2.16",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-simple-typewriter": "^5.0.1",
-    "sweetalert2": "^11.10.5",
+    "sweetalert2": "^11.6.13",
     "usemailprex-react": "^1.0.3"
   },
   "devDependencies": {
